--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,9 @@
     <!-- Bootstrap core CSS -->
     <link href=" {{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Nunito:wght@300&family=Open+Sans:wght@300&family=Work+Sans:wght@300&display=swap" rel="stylesheet">
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -29,26 +32,35 @@
     </style>
     <!-- Custom styles for this template -->
     <link href="{{ asset('assets/css/carousel.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/css/boutiquefrancaise.css') }}" rel="stylesheet">
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">La boutique francaise</a>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top " style="background-color : #0E0E10;">
+        <a class="navbar-brand" href="{{ path('home') }}">La boutique francaise</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#"> Nos produits </a>
+                </li>
+                 <li class="nav-item active">
+                    <a class="nav-link" href="#"> Qui sommes nous ? </a>
+                </li>
+                 <li class="nav-item active">
+                    <a class="nav-link" href="#"> Contact </a>
                 </li>
             </ul>
             
+            <div class="navbar-item-custom">
             {% if app.user %}
-                <a href="{{ path('account') }}"> Mon compte </a> | <a href="{{ path('app_logout') }}"> Déconnexion </a>
+                <a href="{{ path('account') }}"> Mon compte (<small> {{ app.user.firstname }} </small> </a> ) | <a href="{{ path('app_logout') }}"> Déconnexion </a>
             {% else %}
                 <a href="{{ path('app_login') }}"> Connexion </a> | <a href="{{ path('register') }}"> Inscription </a>
             {% endif %}
+            <div>
         </div>
     </nav>
 </header>
@@ -117,11 +129,17 @@
     </div><!-- /.container -->
 
     <!-- FOOTER --> 
-    <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2020 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-    </footer>
+    
 </main>
+<footer class="footer-custom " style="background-color : #0E0E10;">
+        <p class="float-right"><a href="#">Back to top</a></p>
+        <p>
+            &copy; 2017-2020 La Boutique Francaise </br>
+           <small> La boutique 100% made in France </br> 
+             <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
+           <small>
+        </p>
+    </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
 </body>
