--- a/public/assets/css/boutiquefrancaise.css
+++ b/public/assets/css/boutiquefrancaise.css
@@ -2,6 +2,16 @@
 {
     color: white;
 }
+body
+{
+    font-family: 'Open Sans', sans-serif;
+    padding-bottom: 0;    
+    color : black;
+}
+main
+{
+    min-height: 66vh;
+}
 .footer-custom
 {
     text-align: center;
@@ -9,13 +19,5 @@
     bottom: 0px;
     width: 100%; 
     padding: 8px;
-}
-body
-{
-    font-family: 'Open Sans', sans-serif;
-    padding-bottom: 0;    
-}
-main
-{
-    min-height: 66vh;
+    color: white;
 }
