--- a/public/assets/css/boutiquefrancaise.css
+++ b/public/assets/css/boutiquefrancaise.css
@@ -4,7 +4,7 @@
 }
 body
 {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
     padding-bottom: 0;    
     color : black;
 }
@@ -20,4 +20,29 @@ main
     width: 100%; 
     padding: 8px;
     color: white;
+}
+
+.product-item h5
+{
+    text-transform: uppercase;
+    font-size: 15px;
+    margin-bottom: 1px;
+}
+
+.product-item
+{
+    margin-top: 50px;
+}
+
+.product-item .product-subtitle  
+{
+    font-size: 14px;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.product-item .product-price 
+{
+    font-size: 15px; 
+    font-weight: bold;
 }
