--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -6,10 +6,10 @@
     <h1> Produit </h1>  
 
     <div class="row mb-5"> 
-            <div class="col-md-4">  
+            <div class="col-md-5">  
                 <img src="/uploads/{{product.illustration}}" class="img-fluid " alt="{{product.name}}">
             </div>
-            <div class="col-md-8">  
+            <div class="col-md-7 my-auto">  
                     <h3>{{product.name}}</h3>
                     <span class="product-subtitle">{{product.subtitle}}</span>
                     <br>
